Retrieve the Shelly EM IP address from environment

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,7 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
 
 spring.task.scheduling.pool.size=2
+shelly.em.ip=${SHELLY_IP}
 raw-em.sampling.period.milliseconds=2000
 raw-em.hourly-aggregation.cron.schedule=0 15 * * * ?
 raw-em.sampling.threshold=2.5
