--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 build.version=@project.version@
 
-spring.main.web-application-type=none
+server.port=8085
 
 spring.jpa.properties.hibernate.dialect=${DB_DIALECT}
 spring.jpa.hibernate.ddl-auto=none
@@ -18,7 +18,7 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.task.scheduling.pool.size=2
 shelly.em.ip=${SHELLY_IP}
 raw-em.sampling.period.milliseconds=2000
-raw-em.hourly-aggregation.cron.schedule=0 15 * * * ?
+raw-em.hourly-aggregate.cron.schedule=0 15 * * * ?
 raw-em.sampling.threshold=2.5
 
 logging.file.name=${PATH_SHELLY}/shelly-em.log
