Update app to version 1.3.1 (change endpoints and resources, cleanup code)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,9 @@ spring.data.jpa.repositories.bootstrap-mode=default
 spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
-spring.task.scheduling.pool.size=2
+spring.task.scheduling.pool.size=4
+springdoc.swagger-ui.tagsSorter=alpha
+springdoc.writer-with-order-by-keys=true
 shelly.em.ip=${SHELLY_IP}
 raw-em.sampling.period.milliseconds=2000
 raw-em.hourly-aggregate.cron.schedule=0 15 * * * ?
