Completely refactor application

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,9 +13,9 @@ spring.jpa.properties.hibernate.format_sql=false
 spring.task.scheduling.pool.size=4
 springdoc.swagger-ui.tagsSorter=alpha
 springdoc.writer-with-order-by-keys=true
-shelly.em.ip=${SHELLY_EM_IP}
-shelly.pro.em.ip=${SHELLY_PRO_EM_IP}
-raw-em.sampling.period.milliseconds=2000
+shelly.em.ip.addresses=${SHELLY_EM_IP_ADDRESSES}
+shelly.pro.em.ip.addresses=${SHELLY_PRO_EM_IP_ADDRESSES}
+raw-em.sampling.period.milliseconds=3000
 raw-em.hourly-aggregate.cron.schedule=0 15 * * * ?
 raw-em.sampling.threshold=5
 logging.file.name=${PATH_SHELLY}/shelly-em.log
